--- a/Readme.org
+++ b/Readme.org
@@ -2,20 +2,18 @@
 
 ファイルにメモを残す
 
-save scratch notes on each file
+make scratch buffer for each files
 
 ** Usage
 
-Require this script and set a directory to save notes in.
+Require this script and set a directory to save scratches in.
 
 : (require 'scratch-palette)
 : (setq scratch-palette-directory "~/.emacs.d/palette/")
 
-Then a command "scratch-palette-popup" is available. This command
-displays the note for the file currently editing. If there is no note
-yet, a new note is created.
+Then the command =M-x scratch-palette-popup= is available. This
+command displays the scratch buffer for the file. When called with
+region, the region is yanked to the scratch buffer.
 
-When called with region, the region is yanked to the note.
-
-You may close note with one of "C-g", "C-x C-x", or "C-x C-k". Its
+You may close note with one of =C-g=, =C-x C-x=, or =C-x C-k=. Its
 contents are automatically saved.
